RESOLVED FIXED261353
AX: VoiceOver doesn't read column headers of cells within display:contents role="row" elements
https://bugs.webkit.org/show_bug.cgi?id=261353
Summary AX: VoiceOver doesn't read column headers of cells within display:contents ro...
Tyler Wilcock
Reported 2023-09-08 14:20:40 PDT
...
Attachments
Patch (12.99 KB, patch)
2023-09-08 14:36 PDT, Tyler Wilcock
no flags
Patch (12.98 KB, patch)
2023-09-08 14:39 PDT, Tyler Wilcock
no flags
Radar WebKit Bug Importer
Comment 1 2023-09-08 14:20:49 PDT
Tyler Wilcock
Comment 2 2023-09-08 14:36:24 PDT
Tyler Wilcock
Comment 3 2023-09-08 14:39:06 PDT
EWS
Comment 4 2023-09-10 00:03:36 PDT
Committed 267838@main (9e27509d48e3): <https://commits.webkit.org/267838@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 467612 [details].
Note You need to log in before you can comment on or make changes to this bug.