Tools/WebKitTestRunner/InjectedBundle/AccessibilityUIElement.cpp
@@ -121,7 +121,9 @@ void AccessibilityUIElement::setValue(JSStringRef) { }
 JSValueRef AccessibilityUIElement::searchTextWithCriteria(JSContextRef, JSValueRef, JSStringRef, JSStringRef) { return nullptr; }
 bool AccessibilityUIElement::isOnScreen() const { return true; }
 JSValueRef AccessibilityUIElement::mathRootRadicand() const { return { }; }
-#endif
+unsigned AccessibilityUIElement::numberOfCharacters() const { return 0; }
+JSValueRef AccessibilityUIElement::columns() { return { }; }
+#endif // !PLATFORM(MAC) || !ENABLE(ACCESSIBILITY)
 
 #if !PLATFORM(COCOA) || !ENABLE(ACCESSIBILITY)
 RefPtr<AccessibilityUIElement> AccessibilityUIElement::focusedElement() const { return nullptr; }
